--- a/styles/header.css
+++ b/styles/header.css
@@ -1,59 +1,118 @@
-.contato {
+.cabeçalho__menu-hamburguer {
+    width: 24px;
+    height: 24px;
+    display: inline-block;
+    background-image: url("../img/Menu.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.cabeçalho {
     background-color: var(--branco);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+}
+
+.container {
+    display: flex;
+    align-items: center;
+}
+
+.container__imagem {
     padding: 1em;
 }
 
-.contato__titulo,
-.contato__texto {
+
+.lista-menu {
+    display: none;
+    position: absolute;
+    top: 100%;
+    width: 60vw;
+}
+
+.container__botao:checked~.lista-menu {
+    display: block;
+}
+
+.lista-menu__titulo,
+.lista-menu__item {
+    padding: 1em;
+    background-color: var(--branco);
+}
+
+.lista-menu__titulo {
+    color: var(--laranja);
+    font-weight: 700;
+}
+
+.lista-menu__link {
     background: var(--azul-degrade);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
+    text-transform: uppercase;
 }
 
-.contato__titulo {
-    font-size: 18px;
-    font-weight: 500;
+.container__botao {
+    display: none;
 }
 
-.contato__texto {
-    font-weight: 300;
-    margin: 1em 0;
+.container__titulo {
+    display: none;
 }
 
-.contato__email {
-    padding: 1em;
-    border: 1px solid var(--azul);
-    border-radius: 24px;
-    width: 90%;
-    color: var(--azul);
+.opções {
+    display: none
 }
-
-.contato__email::placeholder {
-    font-family: var(--fonte-principal);
-    color: var(--azul);
-    background: url("../img/email.svg") no-repeat 5%;
-    padding-left: 5em;
-}
-
 
 @media screen and (min-width: 1024px) {
-    .contato {
+
+    .container__titulo,
+    .container__titulo--negrito {
+        font-family: var(--fonte-secundario);
+        font-size: 30px;
+    }
+
+    .container__titulo {
+        font-weight: 400;
+        display: block;
+    }
+
+    .container__titulo--negrito {
+        font-weight: 700;
+    }
+
+    .opções {
         display: flex;
-        justify-content: center;
-        align-items: center;
     }
 
-    .contato__titulo {
-        font-size: 24px;
+    .opções__item {
+        padding: 0 1em;
+        text-transform: uppercase;
     }
 
-    .contato__descrição {
-        margin-right: 1em;
-        width: 30%;
+    .opções__link {
+        text-decoration: none;
+        color: var(--preto);
     }
 
-    .contato__email {
-        width: 30%;
+    .container__imagem-transparente {
+        display: none;
     }
+
+    .cabeçalho__menu-hamburguer {
+        display: none;
+    }
+
+    .opções__botão:checked~.lista-menu {
+        display: block;
+        width: auto;
+    }
+
+    .opções__botão {
+        display: none;
+    }
+
 }
